# aidot

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.cargo-husky/hooks/: pre-commit
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  install.sh
src/: cache.rs  cli.rs  config.rs  error.rs  git.rs  main.rs  repository.rs
src/adapters/: claude_code.rs  common.rs  conflict.rs  copilot.rs  cursor.rs  detector.rs  helpers.rs  mod.rs  traits.rs
src/commands/: cache.rs  detect.rs  diff.rs  init.rs  mod.rs  pull.rs  repo.rs  status.rs  update.rs
src/preset/: config.rs  mod.rs  parser.rs
src/template/: config.rs  mod.rs  parser.rs
tests/: integration_test.rs
