[package]
name = "aidot"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
colored = "2.0"

# Git (for Phase 3)
git2 = "0.18"

# Async (for future use)
tokio = { version = "1", features = ["full"] }

# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system
walkdir = "2.4"

# Utilities
dirs = "5.0"

[dev-dependencies]
tempfile = "3.10"
