[package]
name = "aidot"
version = "0.0.0"
edition = "2021"
authors = ["Jooss287"]
description = "AI dotfiles - Manage LLM tool configurations across multiple AI coding assistants"
license = "MIT"
repository = "https://github.com/Jooss287/aidot"
homepage = "https://github.com/Jooss287/aidot"
readme = "README.md"
keywords = ["llm", "cli", "dotfiles", "ai", "config"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "color"] }
colored = "2.0"

# Git (for Phase 3)
git2 = { version = "0.18", features = ["vendored-libgit2", "vendored-openssl"] }

# Async (for future use)
tokio = { version = "1", features = ["full"] }

# Configuration parsing
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# File system
walkdir = "2.4"

# Utilities
dirs = "5.0"

# Self-update
self_update = { version = "0.42", default-features = false, features = [
    "archive-tar",
    "archive-zip",
    "compression-flate2",
    "compression-zip-deflate",
    "rustls"
] }

# HTTP client for manual download
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

# Archive extraction
zip = "2.1"
flate2 = "1.0"
tar = "0.4"

# Temp files
tempfile = "3.10"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }
